--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,11 @@ typings/
 
 # dotenv environment variables file
 .env
+.env.local
+.env.development.local
+.env.production.local
 .env.*.local
+
 # next.js build output
 .next
 
